first approach define playlist

--- a/notebooks/data_prep.ipynb
+++ b/notebooks/data_prep.ipynb
@@ -18,7 +18,8 @@
     "import spotipy.oauth2 as oauth2\n",
     "from spotipy.oauth2 import SpotifyClientCredentials #To access authorised Spotify data\n",
     "\n",
-    "import time"
+    "import time\n",
+    "import random"
    ]
   },
   {
@@ -27,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ARTIST = \"mumford and sons\""
+    "ARTIST = \"Mumford & sons\""
    ]
   },
   {
@@ -124,10 +125,8 @@
    "source": [
     "def get_artist_info(NAME):\n",
     "    result = sp.search(NAME) #search query\n",
-    "    result['tracks']['items'][0]['artists']\n",
-    "\n",
     "    #Extract Artist's uri\n",
-    "    artist_uri = result['tracks']['items'][0]['artists'][0]['uri']\n",
+    "    artist_uri = [x['uri'] for x in result['tracks']['items'][0]['artists'] if x['name'].lower() == NAME.lower()][0]\n",
     "\n",
     "    #Pull all of the artist's albums\n",
     "    sp_albums = sp.artist_albums(artist_uri, album_type='album')\n",
@@ -172,7 +171,7 @@
    "source": [
     "def info_pd(spotify_albums):\n",
     "    sleep_min = 2\n",
-    "    sleep_max = 3\n",
+    "    sleep_max = 5\n",
     "    start_time = time.time()\n",
     "    request_count = 0\n",
     "\n",
@@ -202,13 +201,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def get_setlist_songs(ARTIST, BASE_URL, API_KEY):\n",
     "    artist_url = \"{}/search/artists/?sort=relevance&artistName={}\".format(BASE_URL, ARTIST)\n",
@@ -224,16 +216,18 @@
     "        responses.append(r.json())\n",
     "        \n",
     "    responses_setlist = map(lambda x: x.get('setlist'), responses)\n",
-    "    flattened_setlists = [item for sublist in responses_setlist for item in sublist]\n",
+    "    flattened_setlists = [item for sublist in responses_setlist for item in sublist if 'tour' in item.keys()]\n",
     "    cleaned_setlists = list(map(lambda x: {\n",
     "        'eventDate': x.get('eventDate'), \n",
     "        'songs': list(map(lambda z: z.get('name'), [item for sublist in map(lambda y: y.get('song'), x.get('sets').get('set')) for item in sublist])), \n",
     "        'tour': x.get('tour').get('name'),\n",
     "        'country': x.get('venue').get('city').get('country').get('code')\n",
     "        }, flattened_setlists))\n",
+    "    cleaned_setlists = [x for x in cleaned_setlists if 'songs' in x.keys()]\n",
+    "    cleaned_setlists = [x for x in cleaned_setlists if len(x['songs']) > 5]\n",
     "    only_songs = list(map(lambda x: [\"begin\"] + x.get('songs') + [\"end\"], cleaned_setlists))\n",
     "    \n",
-    "    return only_songs"
+    "    return cleaned_setlists, only_songs"
    ]
   },
   {
@@ -243,18 +237,27 @@
    "outputs": [],
    "source": [
     "def song_list_to_df(ARTIST, BASE_URL, API_KEY):\n",
-    "    songs = get_setlist_songs(ARTIST, BASE_URL, API_KEY)\n",
+    "    cleaned_list, songs = get_setlist_songs(ARTIST, BASE_URL, API_KEY)\n",
     "    pairs = []\n",
-    "    for setlist in songs:\n",
-    "        for i in range(0, len(setlist) - 1):\n",
-    "            pairs.append((setlist[i], setlist[i+1]))\n",
+    "    for concert in cleaned_list:\n",
+    "        setlist = concert['songs']\n",
+    "        setlist = ['begin'] + setlist + ['end']\n",
+    "        for i in range(len(setlist) - 1):\n",
+    "            pairs.append((setlist[i], setlist[i+1], concert['tour'], concert['country'], concert['eventDate']))\n",
     "\n",
     "    df_pairs = pd.DataFrame(pairs)\n",
     "\n",
-    "    df_pairs = df_pairs.rename(columns={0:'song_org', 1:'next_song'})\n",
-    "    df_pairs = df_pairs.groupby(['song_org', 'next_song']).size().reset_index().rename(columns={0:'weight'})\n",
+    "    df_pairs = df_pairs.rename(columns={0:'song_org', 1:'next_song', 2:'tour', 3:'country', 4:'date'})\n",
+    "    the_tour = info_complete.sort_values(by=['date']).iloc[0]['tour']\n",
+    "    df_pairs2 = df_pairs[df_pairs.tour == the_tour]\n",
     "    \n",
-    "    return df_pairs"
+    "    length_concert = df_pairs.groupby('date').count().median()['song_org']\n",
+    "    b = df_pairs2.groupby('date').count()\n",
+    "    dates = b[(b.song_org < length_concert + 1) & (b.song_org > length_concert - 1) ].index\n",
+    "    \n",
+    "    df_pairs2 = df_pairs2[df_pairs.date.isin(dates)].groupby(['song_org', 'next_song']).size().reset_index().rename(columns={0:'weight'})\n",
+    "    \n",
+    "    return df_pairs, df_pairs2"
    ]
   },
   {
@@ -263,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pairs = song_list_to_df(ARTIST, BASE_URL, API_KEY)"
+    "info_complete, df_pairs = song_list_to_df(ARTIST, BASE_URL, API_KEY)"
    ]
   },
   {
@@ -272,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pairs.head()"
+    "df_pairs[df_pairs['song_org'] == 'begin']"
    ]
   },
   {
@@ -291,7 +294,167 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd_artist[(pd_artist.album == 'Delta') & (pd_artist.name == 'Delta')]"
+    "#pd_artist.drop(['track_number', 'id', 'uri'],axis=1)\n",
+    "pd_artist.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pairs[df_pairs.song_org == 'begin'].sort_values(by=['weight'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = nx.from_pandas_edgelist(df_pairs, 'song_org', 'next_song', ['weight'], create_using=nx.DiGraph())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_playlist(G, source='begin', target='end'):\n",
+    "    visited = []\n",
+    "    cur = source\n",
+    "\n",
+    "    while cur != target:\n",
+    "        visited.append(cur)\n",
+    "        weights = []\n",
+    "        neighs = []\n",
+    "        for n in G.neighbors(cur):\n",
+    "            if n not in visited:\n",
+    "                weights.append(G.get_edge_data(cur, n).get('weight'))\n",
+    "                neighs.append(n)\n",
+    "        weights = np.asarray(weights)/sum(weights)\n",
+    "        if len(weights) == 0:\n",
+    "            cur = target\n",
+    "        else:\n",
+    "            cur = np.random.choice(neighs, 1,\n",
+    "                      p=weights)[0]\n",
+    "        \n",
+    "        print(cur)\n",
+    "    return visited"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "playlist_go = get_playlist(G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G_rev = G.reverse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "playlist_rev = get_playlist(G_rev, 'end','begin')\n",
+    "playlist_rev = playlist_rev[::-1]\n",
+    "print(playlist_rev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_weights = []\n",
+    "pos = nx.circular_layout(G)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots(figsize=(20,20))\n",
+    "pos=nx.circular_layout(G)\n",
+    "nx.draw_networkx_nodes(G.nodes, pos=pos)\n",
+    "nx.draw_networkx_labels(G, pos=pos)\n",
+    "colors = ['r', 'b', 'y']\n",
+    "edges_1 = []\n",
+    "edges_2 = []\n",
+    "for i in range(len(playlist_go) - 1):\n",
+    "    edges_1.append((playlist_go[i], playlist_go[i+1]))\n",
+    "\n",
+    "for i in range(len(playlist_rev) - 1):\n",
+    "    edges_2.append((playlist_rev[i], playlist_rev[i+1]))\n",
+    "\n",
+    "for ctr, edges_l in enumerate([edges_1, edges_2]):\n",
+    "    nx.draw_networkx_edges(G,pos=pos, edgelist=edges_l, edge_color = colors[ctr], style='dashed', ax=ax)\n",
+    "\n",
+    "for (node1,node2,data) in G.edges(data=True):\n",
+    "    all_weights.append(data['weight'])\n",
+    "\n",
+    "unique_weights = list(set(all_weights))\n",
+    "\n",
+    "for weight in unique_weights:\n",
+    "    #4 d. Form a filtered list with just the weight you want to draw\n",
+    "    weighted_edges = [(node1,node2) for (node1,node2,edge_attr) in G.edges(data=True) if edge_attr['weight']==weight]\n",
+    "    width = weight*0.1\n",
+    "    nx.draw_networkx_edges(G,pos,edgelist=weighted_edges,width=width, edge_color='k', ax=ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pairs[df_pairs.song_org == 'The Cave']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pairs[df_pairs.song_org == 'begin'].sort_values(by='weight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.random()"
    ]
   },
   {
