--- a/notebooks/data_prep.ipynb
+++ b/notebooks/data_prep.ipynb
@@ -349,156 +349,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "most_played = info_complete[['song_org', 'next_song']].groupby('next_song').count().sort_values(by='song_org').reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>song_org</th>\n",
-       "      <th>tour</th>\n",
-       "      <th>country</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>next_song</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>(I'm) Stranded</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Change Your Mind</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Eminence Front</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Human</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Midnight Show</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Mr. Brightside</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Run for Cover</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Spaceman</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>The Man</td>\n",
-       "      <td>28</td>\n",
-       "      <td>28</td>\n",
-       "      <td>28</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>White Men Can't Jump</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Wonderful Wonderful</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Wonderful, Wonderful</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                      song_org  tour  country  date\n",
-       "next_song                                          \n",
-       "(I'm) Stranded               1     1        1     1\n",
-       "Change Your Mind             1     1        1     1\n",
-       "Eminence Front               1     1        1     1\n",
-       "Human                        3     3        3     3\n",
-       "Midnight Show                1     1        1     1\n",
-       "Mr. Brightside              13    13       13    13\n",
-       "Run for Cover                2     2        2     2\n",
-       "Spaceman                     1     1        1     1\n",
-       "The Man                     28    28       28    28\n",
-       "White Men Can't Jump         1     1        1     1\n",
-       "Wonderful Wonderful         16    16       16    16\n",
-       "Wonderful, Wonderful         5     5        5     5"
+       "array(['Somebody Told Me', 'Read My Mind', 'Human', 'Mr. Brightside'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "info_complete[info_complete.song_org == 'begin'].groupby('next_song').count()"
+    "most_played.iloc[-4:]['next_song'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_statistics(info_complete):\n",
+    "    stats = {}\n",
+    "    first_song = info_complete[info_complete.song_org == 'begin'].groupby('next_song').count().\\\n",
+    "                sort_values(by=['song_org']).reset_index()\n",
+    "    most_played = info_complete[['song_org', 'next_song']].groupby('next_song').count().\\\n",
+    "                sort_values(by='song_org').reset_index()\n",
+    "    \n",
+    "    last_song = info_complete[info_complete.next_song == 'end'].groupby('song_org').count().\\\n",
+    "                sort_values(by=['next_song']).reset_index()\n",
+    "    stats['first_song'] = first_song.iloc[-1].next_song\n",
+    "    stats['top_three'] = list(most_played.iloc[-3:]['next_song'].unique()[::-1])\n",
+    "    stats['most_played'] = most_played.iloc[-1]['next_song']\n",
+    "    stats['last_song'] = last_song.iloc[-1].song_org\n",
+    "    \n",
+    "    return stats\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statistics = get_statistics(info_complete)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'first_song': 'The Man',\n",
+       " 'top_three': ['Mr. Brightside', 'Human', 'Read My Mind'],\n",
+       " 'most_played': 'Mr. Brightside',\n",
+       " 'last_song': 'Mr. Brightside'}"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "statistics"
    ]
   },
   {
