faster popularity score

--- a/notebooks/data_prep.ipynb
+++ b/notebooks/data_prep.ipynb
@@ -89,6 +89,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_popularity_song_art(song, artist):\n",
+    "    for it in sp.search(song)['tracks']['items']:\n",
+    "        if it['artists'][0]['name'].lower() == artist.lower():\n",
+    "            return it['popularity']\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 121,
    "metadata": {},
    "outputs": [],
@@ -354,6 +367,79 @@
    "outputs": [],
    "source": [
     "most_played = info_complete[['song_org', 'next_song']].groupby('next_song').count().sort_values(by='song_org').reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('begin', 0),\n",
+       " ('The Man', 57.5),\n",
+       " ('Somebody Told Me', 64),\n",
+       " ('Spaceman', 52),\n",
+       " ('The Way It Was', 34.333333333333336),\n",
+       " ('Shot at the Night', 0),\n",
+       " ('Run for Cover', 55.5),\n",
+       " ('Jenny Was a Friend of Mine', 49),\n",
+       " ('Smile Like You Mean It', 53),\n",
+       " ('For Reasons Unknown', 59),\n",
+       " ('Human', 65.5),\n",
+       " ('Mr. Brightside', 71)]"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "playlist_go"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "songs_popularity = []\n",
+    "for song in playlist_go:\n",
+    "    songs_popularity.append((song,get_popularity_song_art(song, ARTIST)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(('begin', 0), 0),\n",
+       " (('The Man', 57.5), 66),\n",
+       " (('Somebody Told Me', 64), 68),\n",
+       " (('Spaceman', 52), 61),\n",
+       " (('The Way It Was', 34.333333333333336), 57),\n",
+       " (('Shot at the Night', 0), 63),\n",
+       " (('Run for Cover', 55.5), 64),\n",
+       " (('Jenny Was a Friend of Mine', 49), 53),\n",
+       " (('Smile Like You Mean It', 53), 58),\n",
+       " (('For Reasons Unknown', 59), 59),\n",
+       " (('Human', 65.5), 73),\n",
+       " (('Mr. Brightside', 71), 76)]"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "songs_popularity"
    ]
   },
   {
