--- a/notebooks/data_prep.ipynb
+++ b/notebooks/data_prep.ipynb
@@ -1257,41 +1257,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bokeh.io import show, output_file\n",
-    "from bokeh.models import Plot, Range1d, MultiLine, Circle, HoverTool, TapTool, BoxSelectTool\n",
+    "from bokeh.models import Plot, Range1d, MultiLine, Circle, HoverTool, BoxZoomTool, ResetTool, ColumnDataSource, LabelSet\n",
     "from bokeh.models.graphs import from_networkx, NodesAndLinkedEdges, EdgesAndLinkedNodes\n",
-    "from bokeh.palettes import Spectral4"
+    "from bokeh.palettes import Spectral4\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All I Ask\n",
+      "When We Were Young\n",
+      "California Love\n",
+      "Rumour Has It\n",
+      "Chasing Pavements\n",
+      "Happy Birthday to You\n",
+      "Someone Like You\n",
+      "Take It All\n",
+      "Don't You Remember\n",
+      "Make You Feel My Love\n",
+      "Million Years Ago\n",
+      "Send My Love (to Your New Lover)\n",
+      "Hello\n",
+      "Hometown Glory\n",
+      "One and Only\n",
+      "I Miss You\n",
+      "Skyfall\n",
+      "I'll Be Waiting\n",
+      "Sweetest Devotion\n",
+      "Rolling in the Deep\n",
+      "end\n",
+      "Water Under the Bridge\n",
+      "Set Fire to the Rain\n",
+      "begin\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in G.nodes:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot = figure(title=\"Networkx Integration Demonstration\", x_range=(-1.1,1.1), y_range=(-1.1,1.1),\n",
+    "edge_attrs_width = {}\n",
+    "edge_attrs_color = {}\n",
+    "\n",
+    "edges_1 = []\n",
+    "for i in range(len(playlist_go) - 1):\n",
+    "    edges_1.append((playlist_go[i], playlist_go[i+1]))\n",
+    "    \n",
+    "    \n",
+    "for start_node, end_node, data in G.edges(data=True):\n",
+    "    edge_attrs_width[(start_node, end_node)] = data['weight']*0.1\n",
+    "    edge_attrs_color[(start_node, end_node)] = \"#ee1010\" if (start_node, end_node) in edges_1 else \"#CCCCCC\"\n",
+    "\n",
+    "nx.set_edge_attributes(G, edge_attrs_width, \"edge_width\")\n",
+    "nx.set_edge_attributes(G, edge_attrs_color, \"edge_color\")\n",
+    "\n",
+    "x, y = zip(*graph_renderer.layout_provider.graph_layout.values())\n",
+    "node_labels = [n for n in G.nodes]\n",
+    "source = ColumnDataSource({'x': np.asarray(x)*1.4 - 0.2, 'y': np.asarray(y)*1.3,\n",
+    "                           'name': [node_labels[i] for i in range(len(x))], \n",
+    "                          'ft':[5 for i in range(len(x))]})\n",
+    "\n",
+    "\n",
+    "plot = figure(x_range=(-2,2), y_range=(-2,2), plot_width=800, plot_height=800,\n",
     "              tools=\"\", toolbar_location=None)\n",
     "\n",
-    "plot.add_tools(HoverTool(tooltips=None), TapTool(), BoxSelectTool())\n",
+    "node_hover_tool = HoverTool(tooltips=[(\"Song\", \"@name\")])\n",
+    "plot.add_tools(node_hover_tool, ResetTool(), TapTool())\n",
     "\n",
     "graph_renderer = from_networkx(G, nx.circular_layout, scale=1, center=(0,0))\n",
     "\n",
-    "graph_renderer.node_renderer.glyph = Circle(size=15, fill_color=Spectral4[0])\n",
-    "graph_renderer.node_renderer.selection_glyph = Circle(size=15, fill_color=Spectral4[2])\n",
-    "graph_renderer.node_renderer.hover_glyph = Circle(size=15, fill_color=Spectral4[1])\n",
     "\n",
-    "graph_renderer.edge_renderer.glyph = MultiLine(line_color=\"#CCCCCC\", line_alpha=0.8, line_width=5)\n",
-    "graph_renderer.edge_renderer.selection_glyph = MultiLine(line_color=Spectral4[2], line_width=5)\n",
-    "graph_renderer.edge_renderer.hover_glyph = MultiLine(line_color=Spectral4[1], line_width=5)\n",
+    "graph_renderer.node_renderer.glyph = Circle(size=10, fill_color=\"#CCCCCC\", name='name')\n",
+    "graph_renderer.node_renderer.selection_glyph = Circle(size=10, fill_color=Spectral4[2])\n",
+    "graph_renderer.node_renderer.hover_glyph = Circle(size=10, fill_color=Spectral4[1], name='name')\n",
+    "\n",
+    "\n",
+    "graph_renderer.edge_renderer.glyph = MultiLine(line_color=\"edge_color\", line_alpha=0.8, line_width=\"edge_width\")\n",
+    "graph_renderer.edge_renderer.selection_glyph = MultiLine(line_color=Spectral4[2], line_width=\"edge_width\")\n",
+    "graph_renderer.edge_renderer.hover_glyph = MultiLine(line_color=Spectral4[1], line_width=\"edge_width\")\n",
     "\n",
     "graph_renderer.selection_policy = NodesAndLinkedEdges()\n",
     "graph_renderer.inspection_policy = EdgesAndLinkedNodes()\n",
     "\n",
+    "\n",
     "plot.renderers.append(graph_renderer)\n",
+    "plot.xgrid.visible = False\n",
+    "plot.ygrid.visible = False\n",
+    "\n",
+    "plot.xaxis.visible = False\n",
+    "plot.yaxis.visible = False\n",
+    "\n",
+    "labels = LabelSet(x='x', y='y', text='name', source=source)\n",
+    "\n",
+    "plot.renderers.append(labels)\n",
     "\n",
     "output_file(\"interactive_graphs.html\")\n",
     "show(plot)"
@@ -1299,10 +1375,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#start Bokeh code\n",
+    "edges_1 = []\n",
+    "for i in range(len(playlist_go) - 1):\n",
+    "    edges_1.append((playlist_go[i], playlist_go[i+1]))\n",
+    "    \n",
+    "layout = nx.circular_layout(G)\n",
+    "nodes, nodes_coordinates = zip(*sorted(layout.items()))\n",
+    "nodes_xs, nodes_ys = list(zip(*nodes_coordinates))\n",
+    "nodes_source = ColumnDataSource(dict(x=nodes_xs, y=nodes_ys,name=nodes)) #Can this pass the color? \n",
+    "\n",
+    "hover = HoverTool(tooltips=[('name', '@name')]) #would like to know how to add in more values here manually\n",
+    "\n",
+    "plot = figure(plot_width=800, plot_height=800,tools=['tap', hover, 'box_zoom', 'reset'], toolbar_location=None)\n",
+    "\n",
+    "r_circles = plot.circle('x', 'y', source=nodes_source, size=10, color='#CCCCCC', level = 'overlay')#this function sets the color of the nodes, but how to set based on the name of the node? \n",
+    "\n",
+    "\n",
+    "def get_edges_specs(_network, _layout): \n",
+    "    d = dict(xs=[], ys=[], alphas=[], colors=[], name=[], width=[])\n",
+    "    weights = [d['weight'] for u, v, d in _network.edges(data=True)]\n",
+    "    max_weight = max(weights)\n",
+    "    calc_alpha = lambda h: 0.1 + 0.6 * (h / max_weight)\n",
+    "\n",
+    "    for u, v, data in _network.edges(data=True):\n",
+    "        d['xs'].append([_layout[u][0], _layout[v][0]])\n",
+    "        d['ys'].append([_layout[u][1], _layout[v][1]])\n",
+    "        d['alphas'].append(calc_alpha(data['weight']))\n",
+    "        d['colors'].append([\"#ee1010\" if (u, v) in edges_1 else \"#CCCCCC\"])\n",
+    "        d['width'].append(data['weight']*0.1)\n",
+    "        d['name'].append([(u,v)])\n",
+    "    return d\n",
+    "\n",
+    "lines_source = ColumnDataSource(get_edges_specs(G, layout))\n",
+    "\n",
+    "r_lines = plot.multi_line('xs', 'ys', line_width='width',\n",
+    "                      alpha='alphas', color='colors',\n",
+    "                      source=lines_source)#This function sets the color of the edges\n",
+    "\n",
+    "plot.xgrid.visible = False\n",
+    "plot.ygrid.visible = False\n",
+    "\n",
+    "plot.xaxis.visible = False\n",
+    "plot.yaxis.visible = False\n",
+    "\n",
+    "output_file(\"interactive_graphs.html\")\n",
+    "show(plot)"
+   ]
   },
   {
    "cell_type": "code",
